:dart: (bugfix) Change wrong colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,14 +46,14 @@
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
  
-    --popover: 222.2 84% 4.9%;
+    --popover: 0 0% 6%;
     --popover-foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
  
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
+    --border: 217 0% 18%;
+    --input: 217 0% 18%;
  
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
@@ -61,13 +61,13 @@
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
  
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 217 0% 16%;
     --accent-foreground: 210 40% 98%;
  
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
  
-    --ring: 217.2 32.6% 17.5%;
+    --ring: 217 0% 18%;
   }
 }
  
